--- a/docker_build/docker/drcu/Dockerfile
+++ b/docker_build/docker/drcu/Dockerfile
@@ -31,7 +31,7 @@ RUN wget https://cmake.org/files/v3.14/cmake-3.14.0-Linux-x86_64.sh && \
     ./cmake-3.14.0-Linux-x86_64.sh --skip-license --prefix=/usr/local
 
 # Installing boost for build dependency
-RUN wget https://sourceforge.net/projects/boost/files/boost/1.72.0/boost_1_72_0.tar.bz2/download && \
+RUN wget --no-check-certificate https://sourceforge.net/projects/boost/files/boost/1.72.0/boost_1_72_0.tar.bz2/download && \
     tar -xf download
 RUN cd boost_1_72_0 && \
     ./bootstrap.sh && \
